<resources>
    <string name="app_name">AndroidPaint</string>

    <string name="brush">Brush</string>
    <string name="stamp">Stamp</string>

    <string name="circle">Circle</string>
    <string name="square">Square</string>
    <string name="triangle">Triangle</string>
    <string name="star">Star</string>

    <string name="current_color">Current Color</string>

    <string name="action_settings">Settings</string>
    <string name="action_reset">Reset</string>
</resources>
